--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -88,7 +88,11 @@
       <div class="page">
         <div class="tab-content">
           <div class="tab-pane fade in active" id="like">
+            <% if @user == current_user %>
             <h4>我喜欢的知识</h4>
+            <% else %>
+            <h4>他/她喜欢的知识</h4>
+            <% end %>
             <table class="table">
               <tbody>
                 <% @user.like_knowledges.each do |knowledge| %>
@@ -100,7 +104,11 @@
             </table>
           </div>
           <div class="tab-pane fade" id="star">
+            <% if @user == current_user %>
             <h4>我收藏的知识</h4>
+            <% else %>
+            <h4>他/她收藏的知识</h4>
+            <% end %>
             <table class="table">
               <tbody>
                 <% @user.star_knowledges.each do |knowledge| %>
@@ -112,7 +120,11 @@
             </table>
           </div>
           <div class="tab-pane fade" id="want">
+            <% if @user == current_user %>
             <h4>我想学的知识</h4>
+            <% else %>
+            <h4>他/她想学的知识</h4>
+            <% end %>
             <table class="table">
               <tbody>
                 <% @user.want_knowledges.each do |knowledge| %>
@@ -124,7 +136,11 @@
             </table>
           </div>
           <div class="tab-pane fade" id="have">
+            <% if @user == current_user %>
             <h4>我学过的知识</h4>
+            <% else %>
+            <h4>他/她学过的知识</h4>
+            <% end %>
             <table class="table">
               <tbody>
                 <% @user.like_knowledges.each do |knowledge| %>
@@ -136,7 +152,11 @@
             </table>
           </div>
           <div class="tab-pane fade" id="review">
+            <% if @user == current_user %>
             <h4>我发表过的评测</h4>
+            <% else %>
+            <h4>他/她发表过的评测</h4>
+            <% end %>
             <table class="table table-hover">
               <tbody>
                 <% @user.reviews.each do |review| %>
@@ -149,7 +169,11 @@
             </table>
           </div>
           <div class="tab-pane fade" id="discussion">
+            <% if @user == current_user %>
             <h4>我发表过的讨论</h4>
+            <% else %>
+            <h4>他/她发表过的讨论</h4>
+            <% end %>
             <table class="table table-hover">
               <tbody>
                 <% @user.discussions.each do |discussion| %>
@@ -162,7 +186,11 @@
             </table>
           </div>
           <div class="tab-pane fade" id="comment">
+            <% if @user == current_user %>
             <h4>我回复过的帖子</h4>
+            <% else %>
+            <h4>他/她回复过的帖子</h4>
+            <% end %>
             <table class="table table-hover">
               <tbody>
                 <% @user.comments.each do |comment| %>
