--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,5 +1,4 @@
 <footer class="container" style="margin-top: 100px;">
-    <p class="text-center">Copyright ©2017 KnewMark
-
+    <p class="text-center">©KnewMark
     </p>
 </footer>
