--- a/app/views/admin/knowledges/index.html.erb
+++ b/app/views/admin/knowledges/index.html.erb
@@ -4,4 +4,4 @@
 <br>
 <hr>
 
-<%= render :partial => "knowledge_item", :collection => @knowledges, :as => :knowledge %>
+<%= render :partial => "knowledges/knowledge_item", :collection => @knowledges, :as => :knowledge %>
