--- a/app/views/common/_admin_navbar.html.erb
+++ b/app/views/common/_admin_navbar.html.erb
@@ -1,31 +1,52 @@
-<div class="navbar-wrap">
-  <div class="navbar">
+<div class="navbar-wrap container-fluid">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">KnewMark后台</a>
+      </div>
 
-    <div class="navbar-left">
-      <a class="navbar-brand" href="/">KnewMark后台 </a>
-      <%= link_to('用户管理', admin_users_path) %>
+      <div class="collapse navbar-collapse" id="navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li>
+            <%= link_to('用户管理', admin_users_path) %>
+          </li>
+          <li>
+            <%= link_to('前台', root_path) %>
+          </li>
+        </ul>
 
+        <ul class="nav navbar-nav navbar-right">
+
+          <% unless logged_in? %>
+            <li><%= link_to("注册", new_user_path)%></li>
+            <li><%= link_to("登入", new_session_path) %></li>
+          <% else %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <i class="fa fa-plus" aria-hidden="true"></i>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to("推荐知识", new_knowledge_path) %></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown">个人中心<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li> <%= link_to "修改密码", account_password_path %></li>
+                <li> <%= link_to("登出", session_path(current_user), method: :delete) %> </li>
+              </ul>
+            </li>
+          <% end -%>
+        </ul>
+
+      </div>
     </div>
 
-    <ul class="navbar-list">
-      <% unless logged_in? %>
-        <li class="navbar-listItem"><%= link_to("注册", new_user_path)%></li>
-        <li class="navbar-listItem"><%= link_to("登入", new_session_path) %></li>
-      <% else %>
-      <li class="navbar-listItem">Hi!, <%= current_user.username %></li>
-      <li class="navbar-listItem dropdown">
-        <a class="navbar-listItem dropdown-toggle" data-toggle="dropdown">个人中心<b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <% if current_user.admin? %>
-          <li><%= link_to "Admin 后台", admin_knowledges_path %></li>
-          <% end %>
-          <li> <%= link_to "心愿单", account_knowledges_path %></li>
-          <li> <%= link_to "修改密码", account_password_path %></li>
-          <li> <%= link_to("登出", session_path(current_user), method: :delete) %> </li>
-        </ul>
-          </li>
-      <% end %>
-    </ul>
-
-  </div>
+  </nav>
 </div>
